[SIDP-279] - IdP should log NameID for auditing
[SIDP-280] - when an Idp has no outside (WAN) access Idp fails to collect or release attributes
[SIDP-285] - Use $IDP_SCOPE$ to populate IdP scope in conf-tmpl\attribute-resolver.xml
[SIDP-291] - Update libs for 2.1.3 release
[SIDP-306] - Remove ClientCertAuth rule from SAML 2 SSO SecurityPolicy in relying-party.xml

Changes in Release 2.1.2
=============================================
* Significant memory optimizations
[SIDP-260] - NPE in login-err.jsp
[SIDP-262] - MIME type on metadata profile handler is incorrect
[SIDP-267] - check if cookies are set on error.jsp
[SIDP-268] - Expose Metadata on entityID URL


Changes in Release 2.1.1
=============================================
[SIDP-248] - Signing code in profile handlers and encoders should not just check that a signing credential is supplied, but that a signing key is available in that credential.
[SIDP-249] - PreviousSession INFO message printed as ERROR message
[SIDP-250] - AuthenticationEngine::returnToAuthenticationEngine() static method called before servlet init() when clustered.
[SIDP-251[ - NPE when SAML1 Attribute Query Handler hit with GET request
[SIDP-252] - IdPSessionFilter throws ArrayIndexOutOfBoundsException on validation of unexpected cookie
[SIDP-257] - Previous session is used if the user has an existing session but the SP requests an authentication method that is not currently active.
[SIDP-259] - Installer does not remove old library versions from IDP_HOME/lib

Changes in Release 2.1.0
=============================================
[SIDP-20] - Cannot deploy on Windows. Spring and DOS device names?
[SIDP-164] - Option to make session cookie secure
[SIDP-165] - Support for SessionNotOnOrAfter
[SIDP-167] - Missing tags and incomplete login.jsp
[SIDP-170] - Attribute Filter refresh won't work with "resource:FileBackedHttpResource"
[SIDP-171] - Cannot deploy to directories in spaces in the names